// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <EventsDetailForm /> should renders correctly when form is submitted 1`] = `
<div
  className="panel-body-inner"
>
  <form
    className="form"
    name="eventsPanelForm"
  >
    <div
      className="form-group-wrapper"
    >
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="name"
            label="Event Name"
            name="name"
            placeholder=""
            props={
              Object {
                "isSubmit": true,
              }
            }
            type="text"
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="type"
            label="Event Type"
            name="type"
            props={
              Object {
                "disabled": true,
                "isSubmit": true,
                "placeholder": undefined,
              }
            }
          />
        </div>
      </div>
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="description"
            label="Notes"
            name="description"
            props={
              Object {
                "isSubmit": true,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="dateTime"
            label="Event Date Time"
            name="dateTime"
            props={
              Object {
                "format": "DD-MMM-YYYY HH:mm",
                "isSubmit": true,
                "minDate": "2017-01-01T00:00:00.000Z",
                "showTimeSelect": true,
                "timeFormat": "HH:mm",
                "timeIntervals": 5,
              }
            }
          />
        </div>
      </div>
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="author"
            label="Author"
            name="author"
            props={
              Object {
                "disabled": true,
                "isSubmit": true,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="dateCreated"
            label="Date"
            name="dateCreated"
            props={
              Object {
                "disabled": true,
                "format": "DD-MMM-YYYY",
                "isSubmit": true,
                "value": 1507020019000,
              }
            }
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Component <EventsDetailForm /> should renders with props correctly 1`] = `
<div
  className="panel-body-inner"
>
  <form
    className="form"
    name="eventsPanelForm"
  >
    <div
      className="form-group-wrapper"
    >
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="name"
            label="Event Name"
            name="name"
            placeholder=""
            props={
              Object {
                "isSubmit": false,
              }
            }
            type="text"
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="type"
            label="Event Type"
            name="type"
            props={
              Object {
                "disabled": true,
                "isSubmit": false,
                "placeholder": undefined,
              }
            }
          />
        </div>
      </div>
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="description"
            label="Notes"
            name="description"
            props={
              Object {
                "isSubmit": false,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="dateTime"
            label="Event Date Time"
            name="dateTime"
            props={
              Object {
                "format": "DD-MMM-YYYY HH:mm",
                "isSubmit": false,
                "minDate": "2017-01-01T00:00:00.000Z",
                "showTimeSelect": true,
                "timeFormat": "HH:mm",
                "timeIntervals": 5,
              }
            }
          />
        </div>
      </div>
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="author"
            label="Author"
            name="author"
            props={
              Object {
                "disabled": true,
                "isSubmit": false,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="dateCreated"
            label="Date"
            name="dateCreated"
            props={
              Object {
                "disabled": true,
                "format": "DD-MMM-YYYY",
                "isSubmit": false,
                "value": 1507020019000,
              }
            }
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;
